# usbhubctrl

./: .gitignore  .travis.yml  LICENSE.md  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  hub-ctrl.c
doc/: doxyfile  doxyfile.in
include/: file_io.h  usb_eeprom.h
src/: Makefile.am  file_io.c  usb_eeprom.c
tests/: Makefile.am  check_file_io.c  check_file_io.h  check_hub_ctrl.c  check_usb_eeprom.c  check_usb_eeprom.h  check_usb_eeprom_data.h  dummy_usb.c  dummy_usb.h  test_write_eeprom.sh
udev/: 75-hub-ctrl.rules  Makefile.am
